package org.example;

public class Main {
    public static void main(String[] args) {
        Menu menu = new Menu(); // Создаем экземпляр меню
        menu.displayMenu(); // Вызываем метод для отображения меню
    }
}

